appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "I"
      - extendedWaitUntil:
          visible: "Image"
          timeout: 10000
- tapOn:
    text: "Image"
- tapOn:
    text: "Image icon"
- assertVisible:
    text: "Image Icon"
- takeScreenshot:
    path: "maestro/images/actual/${PLATFORM}/image_icon"
- assertScreenshot:
    path: "maestro/images/expected/${PLATFORM}/image_icon.png"
