appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "I"
      - extendedWaitUntil:
          visible: "Intro screen"
          timeout: 10000
- tapOn:
    text: "Intro screen"
- extendedWaitUntil:
    visible: "Active slide: 2"
    timeout: 5000
- assertVisible:
    text: "Changes: 0"
- waitForAnimationToEnd:
    timeout: 2000
- swipe:
    start: 90%, 10%
    end: 15%, 10%
- extendedWaitUntil:
    visible: "Active slide: 3"
    timeout: 5000
- assertVisible:
    text: "Changes: 1"
- waitForAnimationToEnd:
    timeout: 2000
- swipe:
    start: 15%, 10%
    end: 90%, 10%
- extendedWaitUntil:
    visible: "Active slide: 2"
    timeout: 5000
- assertVisible:
    text: "Changes: 2"
- tapOn:
    text: "PREVIOUS"
- extendedWaitUntil:
    visible: "Active slide: 1"
    timeout: 5000
- assertVisible:
    text: "Changes: 3"
- tapOn:
    text: "SKIP"
- extendedWaitUntil:
    visible: "Skipped"
    timeout: 5000
- tapOn:
    text: "OK"
- tapOn: "Go back"
- tapOn:
    text: "Intro screen"
- extendedWaitUntil:
    visible: "Active slide: 2"
    timeout: 5000
- tapOn:
    text: "NEXT"
- extendedWaitUntil:
    visible: "Active slide: 3"
    timeout: 5000
- tapOn:
    text: "FINISH"
- extendedWaitUntil:
    visible: "Done"
    timeout: 5000