appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "L"
      - extendedWaitUntil:
          visible: "List view swipe"
          timeout: 10000
- tapOn:
    text: "List view swipe"
- assertVisible:
    text: "Actions"
- assertVisible:
    text: "Test 1"
- tapOn:
    text: "Buttons"
- assertVisible:
    text: "Test 1"
