appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "M"
      - extendedWaitUntil:
          visible: "Maps"
          timeout: 10000
- tapOn:
    text: "Maps"
- tapOn:
    text: "Maps Dynamic markers"
- assertVisible:
    text: "Dynamic Markers"
