appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "P"
      - extendedWaitUntil:
          visible: "Popup menu"
          timeout: 10000
- tapOn:
    text: "Popup menu"
- tapOn:
    text: "Combinations"
- assertVisible:
    text: "Withcontainer"
- tapOn: "Go back"
- tapOn:
    text: "Basic"
- tapOn:
    text: "Alert"
- waitForAnimationToEnd:
    timeout: 10000
- takeScreenshot:
    path: "maestro/images/actual/${PLATFORM}/popup_menu_alert"
- assertScreenshot:
    path: "maestro/images/expected/${PLATFORM}/popup_menu_alert.png"


