appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "P"
      - extendedWaitUntil:
          visible: "Progress circle"
          timeout: 10000
- tapOn:
    text: "Progress circle"
- assertVisible:
    text: "With default text:"
- takeScreenshot:
    path: "maestro/images/actual/${PLATFORM}/progress_circle"
- assertScreenshot:
    path: "maestro/images/expected/${PLATFORM}/progress_circle.png"
