appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "R"
      - extendedWaitUntil:
          visible: "Rating"
          timeout: 10000
- tapOn:
    text: "Rating"
- assertVisible:
    text: "Normal:"
- takeScreenshot:
    path: "maestro/images/actual/${PLATFORM}/rating"
- assertScreenshot:
    path: "maestro/images/expected/${PLATFORM}/rating.png"
