appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "R"
      - extendedWaitUntil:
          visible: "Repeater"
          timeout: 10000
- tapOn:
    text: "Repeater"
- assertVisible:
    text: "FirstName 1"
    index: 0
- assertVisible:
    text: "Nested Repeater"
- assertVisible:
    text: "Hello"
    index: 2
- assertVisible:
    text: "hello"
    index: 7
