appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "S"
      - extendedWaitUntil:
          visible: "Safe area view"
          timeout: 10000
- tapOn:
    text: "Safe area view"
- tapOn:
    text: "Bottom bar"
- assertVisible: "Expected result:\r

    \ - Safe area has an orange background color\r

    \ - Bottom bar starts directly below safe area"
- takeScreenshot:
    path: "maestro/images/actual/${PLATFORM}/safe_area_view_bottom_bar"
- assertScreenshot:
    path: "maestro/images/expected/${PLATFORM}/safe_area_view_bottom_bar.png"
