appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "S"
      - extendedWaitUntil:
          visible: "Safe area view"
          timeout: 10000
- tapOn:
    text: "Safe area view"
- tapOn:
    text: "Container"
- assertVisible: "Safe area view widget directly on a fullscreen page. The safe area has an orange background color.\r

    Expected result: \r

    \ - Safe area has horizontal and vertical padding\r

    \ - Safe area has an orange background color\r

    \ - White container uses all available space (flex 1)"
- takeScreenshot:
    path: "maestro/images/actual/${PLATFORM}/safe_area_view_container"
- assertScreenshot:
    path: "maestro/images/expected/${PLATFORM}/safe_area_view_container.png"
