appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "S"
      - extendedWaitUntil:
          visible: "Safe area view"
          timeout: 10000
- tapOn:
    text: "Safe area view"
- tapOn:
    text: "List view"
- assertVisible:
    text: "test Shoe  1 favorite No"
- assertVisible:
    id: "image1"
    index: 14
- takeScreenshot:
    path: "maestro/images/actual/${PLATFORM}/safe_area_view_list_view"
- assertScreenshot:
    path: "maestro/images/expected/${PLATFORM}/safe_area_view_list_view.png"
