appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "S"
      - extendedWaitUntil:
          visible: "Safe area view"
          timeout: 10000
- tapOn:
    text: "Safe area view"
- tapOn:
    text: "Text"
- assertVisible: "Default safe area view widget directly on a fullscreen page.\r

    \r

    Expected result: Text rendered in safe area and full blue background"
- takeScreenshot:
    path: "maestro/images/actual/${PLATFORM}/safe_area_view_text"
- assertScreenshot:
    path: "maestro/images/expected/${PLATFORM}/safe_area_view_text.png"
