appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "S"
      - extendedWaitUntil:
          visible: "Slider"
          timeout: 10000
- tapOn:
    text: "Slider"
- assertVisible: "Dynamic ranges"
- takeScreenshot:
    path: "maestro/images/actual/${PLATFORM}/slider"
- assertScreenshot:
    path: "maestro/images/expected/${PLATFORM}/slider.png"
