appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "S"
      - extendedWaitUntil:
          visible: "Switch"
          timeout: 10000
- tapOn:
    text: "Switch"
- assertNotVisible: 
    text: "I will present myself when the boolean is True"
- tapOn:
    id: "switch1"
- assertVisible: 
    text: "I will present myself when the boolean is True"
