appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "V"
      - extendedWaitUntil:
          visible: "Video player"
          timeout: 10000
- tapOn: 
    text: "Video player"
- assertVisible: 
    text: "Video player"
