appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- tapOn:
    text: "W"
- tapOn: 
    text: "Web view"
- tapOn: 
    text: "Events"
- assertVisible:
    optional: true
    text: "URL loaded"
- tapOn:
    optional: true 
    text: "OK"
- assertVisible: 
    text: "Valid URL"


