appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "W"
      - extendedWaitUntil:
          visible: "Web view"
          timeout: 10000
- tapOn: 
    text: "Web view"
- tapOn: 
    text: "Events"
- extendedWaitUntil:
    visible: "URL loaded"
    timeout: 30000
- tapOn: 
    text: "OK"
- tapOn: 
    text: "Invalid URL"
- extendedWaitUntil:
    visible: "Error"
    timeout: 30000