appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "W"
      - extendedWaitUntil:
          visible: "Web view"
          timeout: 10000
- tapOn: 
    text: "Web view"
- tapOn: 
    text: "URL"
- assertVisible: 
    text: "URL loaded"
